--- a/Python/Streamlit Breast Cancer Predictor/requirements.txt
+++ b/Python/Streamlit Breast Cancer Predictor/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.25.0
-scikit-learn==1.3.1
-pandas==2.1.1
-matplotlib==3.8.0
-seaborn==0.12.2
+scikit-learn>=1.0
+pandas>=1.0
+matplotlib>=3.2
+seaborn>=0.10
